<resources>
    <string name="app_name">Sliding Puzzles</string>
    <string name="game_name">Sliding \nPuzzles</string>
    <string name="start_button_text">  Random&#160;Start</string>
    <string name="Customize_button_text"> Customized \n Game</string>
    <string name="help_button_text"> Help</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="auto_solve_2_lines">Solve\n It!</string>
    <string name="auto_solve">Solve It!</string>
    <string name="moves_left">#Moves Left: </string>
    <string name="progress_dialog_message">"Calculating Moves &#8230;"</string>
    <string name="game_win">"Congrats you solved it!"</string>

    <string name="width_hint">Enter Puzzle Width Here (2 to 5 inclusive)</string>
    <string name="height_hint">Enter Puzzle Height Here (2 to 5 inclusive)</string>
    <string name="swap_hint">Top grid: start state\nCustomize by swapping items for each grid (not between) \nBottom grid: goal state</string>
    <string name="width_error">Width must be an integer between 2 and 5 inclusively</string>
    <string name="height_error">Height must be an integer between 2 and 5 inclusively</string>
    <string name="image_error"> An image must be selected</string>
    <string name="text_before_image_error">Width and Height must be set correctly before image selection</string>
    <string name="after_image_error">An piece of image must be selected as blank symbol (by clicking)</string>
    <string name="puzzle_unsolvable_error">Current Puzzle is unsolvable. Try to do one more swap on non-blank symbols.</string>
    <string name="out_of_memory_error">Sorry, memory exhausted &#8230;</string>

    <string name="choose_other_image">Click here to choose your own image!</string>
    <string name="other_image_chosen">Want to change your image again?</string>
    <string name="choose_blank">Great! Now choose your blank</string>
    <string name="blank_chosen">Blank targeted!</string>

    <string name="choose_other_image_error">"Sorry, Can't Load Image, Please retry"</string>


    <string name="menu_next">Next</string>
    <string name="menu_prev">Prev</string>
    <string name="go_back_to_main">Finish</string>
    <string name="show_hide_goal">Show/Hide Goal Hint</string>

    <string name="extra_width" translatable="false">EXTRA_PUZZLE_WIDTH</string>
    <string name="extra_height" translatable="false">EXTRA_PUZZLE_HEIGHT</string>
    <string name="extra_id" translatable="false">EXTRA_PUZZLE_NUMBER</string>
    <string name="extra_uri" translatable="false">EXTRA_PUZZLE_URI</string>
    <string name="extra_blank" translatable="false">EXTRA_PUZZLE_BLANK_POSITION</string>
    <string name="extra_start" translatable="false">EXTRA_PUZZLE_START_STATE</string>
    <string name="extra_goal" translatable="false">EXTRA_PUZZLE_GOAL_STATE</string>

    <string name="FAQ_text"><b>How to go to next page? </b>\nThere are menu items at top of screen except in main menu. It can help you navigate or hide/show items. Sometimes you can’t proceed and message will show up or UI will change.\n\n\n<b>How to play this game? </b>\nThere 2 modes, random vs customized. Both require you set width and height and select image, though random gives you some predefined images. Customized also require you to select a position as blank and set start and goal positions correctly. The rule of game is at every move you should find where blank tile is and place an adjacent tile to it (swapping positions). This continued until you gets to the goal state. \n\n\n<b>What to do after auto-solve (i.e. after clicking ‘Solve it!’)? </b>\nAfter auto-solve, you have no control over where to move the tiles. Indeed, every time you click on the board, a pre-calculated tile will be moved, and when you click on the background, the previous move will be undoed. In summary, click board will move forward one move and click elsewhere will move backward one move. \n\n\n<b>Why sometimes calculating-moves/auto-solve stay 99% for a long time? </b>\nCurrently my algorithm is not deterministic, so I have no way to get the exact time in order to solve the puzzle. Instead, I have to estimate the required time by testing. However, you can start other tasks if you don’t want to wait, and it will calculate in background (as long as android is not too busy). \n\n\n<b>Why sometimes when I set start and goal it says it is impossible to solve?\n</b>This due to the nature of game. Indeed, exactly half of the initial configuration is unsolvable (https://en.wikipedia.org/wiki/15_puzzle#Solvability). Simply swapping any 2 distinct non-blank symbol (in either start configuration or goal but not both) will resolve this issue.</string>
</resources>
