<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="com.example.android.imageprocessinggame.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="48sp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="20dp"
         />

    <Button
        android:id="@+id/buttonStart"
        android:text="@string/start_button_text"
        style="@style/MainMenuButton" />

    <Button
        android:id="@+id/buttonCustomize"
        android:text="@string/Customize_button_text"
        style="@style/MainMenuButton" />

    <Button
        android:id="@+id/buttonHelp"
        android:text="@string/help_button_text"
        style="@style/MainMenuButton"    />


</LinearLayout >

