<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.imageprocessinggame.GameParameter"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/width_button_group"
        android:layout_marginTop="8dp">
        <Button
            style="@style/GameParamButtonTextLayout"
            android:text="@string/width"
            android:id="@+id/width_text" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="2"
            android:id="@+id/width_2" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="3"
            android:id="@+id/width_3" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="4"
            android:id="@+id/width_4" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="5"
            android:id="@+id/width_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/width_button_group"

        android:id="@+id/height_button_group"
        android:layout_marginTop="8dp">
        <Button
            style="@style/GameParamButtonTextLayout"
            android:text="@string/height"
            android:id="@+id/height_text" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="2"
            android:id="@+id/height_2" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="3"
            android:id="@+id/height_3" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="4"
            android:id="@+id/height_4" />

        <Button
            style="@style/GameParamButtonNumberLayout"
            android:text="5"
            android:id="@+id/height_5" />
    </LinearLayout>

    <Button
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/height_button_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorAccent"
        android:id="@+id/choose_other_image_button"
        android:text = "@string/choose_other_image"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <GridView
        android:id="@+id/image_selection_grids"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_other_image_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:numColumns="2"
        android:gravity="fill_horizontal"
        android:stretchMode="columnWidth"
        tools:layout_editor_absoluteX="8dp" />
</android.support.constraint.ConstraintLayout>
